infra/K8s/client.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: react-app
spec:
  containers:
    - name: react-app
      image: client-image:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 80
