infra/K8s/comments.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: comments-pod
spec:
  containers:
    - name: comments
      image: comments-image:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 4001
