infra/K8s/event-bus.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: event-bus-pod
spec:
  containers:
    - name: event-bus
      image: event-bus-image:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 4005
