infra/K8s/moderation.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: moderation-pod
spec:
  containers:
    - name: moderation
      image: moderation-image:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 4003
