infra/K8s/posts.deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  selector:
    matchLabels:
      app: posts
  replicas: 1
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: posts-image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
