infra/K8s/posts.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: posts-image
      ports:
        - containerPort: 4000
