infra/K8s/query-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: query-pod
spec:
  containers:
    - name: query
      image: query-image:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 4002
