infra/K8s/comments.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
