infra/K8s/posts.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
